# CG

./: README.md
Assignment_1/: CMakeLists.txt
Assignment_1/data/: cube.off
Assignment_1/src/: main.cpp
Assignment_3/: CMakeLists.txt
Assignment_3/data/: cube.off
Assignment_3/extra/: main_depth.cpp  main_view.cpp
Assignment_3/src/: Helpers.cpp  Helpers.h  main.cpp
Assignment_4/: CMakeLists.txt  Demo.pptx
Assignment_4/src/: Helpers.cpp  Helpers.h  fragment.shader  fragment_close.shader  fragment_dilation.shader  fragment_embossing.shader  fragment_gaussian.shader  fragment_gaussian5.shader  fragment_gaussian7.shader  fragment_sobel.shader  main.cpp  main_text_rendering  stb_image_write.h  vertex.shader
